--- a/docs/_posts/2024-12-22-index.markdown
+++ b/docs/_posts/2024-12-22-index.markdown
@@ -9,46 +9,32 @@ author: Prasun Anand
 banner: /static/images/logo.svg
 ---
 
-<p align="center">
-  <img height="100px" width="auto" src="/static/images/logo.svg" alt="Zasper">
-</p>
-<p align="center">
-    ⚡ High Performance IDE 🚀 Massive concurrency 🐥  Inspired by Jupyter
-</p>
+Zasper is a new open-source IDE for working with Jupyter notebooks. It’s built from scratch to be:
 
-<p align=center>
-  <a href="https://github.com/zasper-io/zasper" target="_blank">
-      <img src="https://img.shields.io/github/last-commit/zasper-io/zasper" alt="Last Commit">
-  </a>
-  <a href="https://github.com/zasper-io/zasper/stargazers" target="_blank">
-      <img src="https://img.shields.io/github/stars/zasper-io/zasper" alt="GitHub Stars">
-  </a>
-  <a href="https://github.com/zasper-io/zasper/issues" target="_blank">
-      <img src="https://img.shields.io/github/issues/zasper-io/zasper" alt="GitHub Issues">
-  </a>
-  <a href="https://github.com/zasper-io/zasper/actions/workflows/gobuild.yml" target="_blank"><img alt="Github CD status" src="https://github.com/zasper-io/zasper/actions/workflows/gobuild.yml/badge.svg"></a>
-</p>
+* 🚀 Blazing fast
+* 🧠 Highly concurrent
+* 💾 Low on resource usage
+* 💥 Crash-resistant, even under heavy loads
 
+It is cross-platform.
 
-Zasper is an IDE designed from the ground up to support massive concurrency. It provides a minimal memory footprint, exceptional speed, and the ability to handle numerous concurrent connections.
+* ✅ Fully supported: macOS & Linux
+* ⚠️ Limited support: Windows — for the best experience, use via WSL
 
-It's perfectly suited for running REPL-style data applications, with Jupyter notebooks being one example.
+# Benchmarks
 
-Currently Zasper is supported on Linux and Mac.
+How is Zasper better than JupyterLab ?
 
+![](https://raw.githubusercontent.com/zasper-io/zasper-benchmark/main/assets/summary_resources.png)
 
-### Why I built Zasper ?
+* Up to 5X Less CPU usage
+* Up to 40X Less RAM usage
+* Higher throughput
+* Lower latency
+* Highly resilient under very high loads
 
+Benchmark comparision report can be accessed [here](https://github.com/zasper-io/zasper-benchmark?tab=readme-ov-file#benchmarking-zasper-vs-jupyterlab).
 
-There are several proprietary JupyterLab-like frontend tools available in the market, such as Databricks Notebooks and Deepnote Notebooks. However, none of them are free or open-source, and most require users to work in the cloud. Even the modest personal computers these days are typically equipped with at least 8 GB of RAM, an 8-core CPU, and a decent 4 GB GPU, I saw an opportunity to create a solution that works seamlessly on local machines. That’s why I decided to build Zasper which can effectively utilize the resources available and guarantee maximum efficiency.
-
-Originally I wrote https://github.com/zasper-io/zasper_py (now in Private mode) to build a new frontend around Jupyter. During the process I realized, Go is the ideal choice to rebuild the Jupyter project. Go has excellent support for REST, RPC, WS protocols. Concurrency and Performance are the areas where Go shines.
-
-Go's Concurrency: Better suited for applications requiring both concurrency and parallelism, as it leverages multiple cores effectively. It's easier to handle blocking operations without freezing the system.
-
-Python's Event Loop: Ideal for I/O-bound applications that need to handle a lot of asynchronous tasks without blocking. However, it struggles with CPU-bound tasks and lacks native parallelism unless additional worker threads are used.
-
-Hence the Go version of Zasper was born!
 
 ### 📷 Screenshots
 
@@ -59,20 +45,18 @@ Hence the Go version of Zasper was born!
 ![Editor](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/terminal.png)
 
 ### Launcher
-![Launcher](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/launcher.png) 
+![Launcher](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/launcher.png)
 
 ### Jupyter Notebook
-![Notebook](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/notebook.png) 
+![Notebook](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/notebook.png)
 
 ### Version Control
-![Version Control](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/git.png) 
+![Version Control](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/git.png)
 
 ### Command Palette
 ![Command Palette](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/commandPalette.png)
 
 ### Dark Mode
-![Dark mode](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/dark.png) 
+![Dark mode](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/dark.png)
 
-![Dark Notebook mode](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/darkNotebook.png) 
-
-
+![Dark Notebook mode](https://raw.githubusercontent.com/zasper-io/assets/refs/heads/main/darkNotebook.png)
